kustomize/overlays/dev/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: adminer
