kustomize/overlays/dev/pgadmin-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 3
