kustomize/overlays/dev/ingress-adminer-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
spec:
  rules:
    - host: 152.42.156.69.nip.io
      http:
        paths:
          - path: /adminer
            pathType: ImplementationSpecific
            backend:
              service:
                name: adminer-svc
                port:
                  number: 8080
